завершенный. без комметов

--- a/DeveloperSite/Views/Home/PersonalArea.cshtml
+++ b/DeveloperSite/Views/Home/PersonalArea.cshtml
@@ -14,10 +14,10 @@
 <body>
     <h2>Войдите в учетную запись</h2>
     <div class="RegButton">
-        <form asp-controller="Home" asp-action="GetReg" method="post">
+        <form asp-controller="Registration" asp-action="GetReg" method="post">
             <button type="submit" class="reg-button" >Зарегистрироваться</button>
         </form>
-         <form asp-controller="Home" asp-action="GetLog" method="post">
+         <form asp-controller="LogIn" asp-action="GetLog" method="post">
              <br>
         <button href="~/Registration/Login" type="sumbit" class="reg-button">Войти</button>
         </form>
