--- a/DeveloperSite/Views/Registration/Login.cshtml
+++ b/DeveloperSite/Views/Registration/Login.cshtml
@@ -12,9 +12,9 @@
         <h2>Введите свои данные</h2>
         <div class="registration-strings"
             <label>Email</label>
-            <input type="text" name="User_email" />
+            <input type="email" name="User_email" />
             <label>Пароль</label>
-            <input type="text" name="User_password" />
+            <input type="password" name="User_password" />
             <input type="submit" value="Войти" />
         </div>
     </form>
