--- a/DeveloperSite/Views/Registration/Registration.cshtml
+++ b/DeveloperSite/Views/Registration/Registration.cshtml
@@ -14,7 +14,7 @@
             <label>Имя</label>
             <input type="text" name="User_name" />
             <label>Email</label>
-            <input type="text" name="User_email" />
+            <input type="email" name="User_email" />
             <label>Пароль</label>
             <input type="text" name="User_password" />
             <input type="submit" value="Отправить" />
