--- a/DeveloperSite/wwwroot/css/Profil.css
+++ b/DeveloperSite/wwwroot/css/Profil.css
@@ -1,7 +1,71 @@
 ﻿body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
 }
 
 .profilhead-text {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
+
+.profile-edit {
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    margin: 20px auto;
+    text-align: left;
+    width: 300px;
+}
+
+.profile-delete {
+    background-color: #f0f0f0
+}
+
+    .profile-edit h3, .profile-delete h3 {
+        text-align: center;
+    }
+
+    .profile-edit form, .profile-delete form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .profile-edit label, .profile-delete label {
+        margin-bottom: 10px;
+    }
+
+    .profile-edit input[type="text"], .profile-delete input[type="email"] {
+        padding: 8px;
+        width: 80%;
+        margin-bottom: 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    .profile-edit input[type="submit"], .profile-delete input[type="submit"] {
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+        .profile-edit input[type="submit"]:hover, .profile-delete input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+    .profile-delete input[type="submit"] {
+        background-color: #f44336;
+    }
+
+        .profile-delete input[type="submit"]:hover {
+            background-color: blueviolet;
+        }
