--- a/DeveloperSite/wwwroot/css/Registration.css
+++ b/DeveloperSite/wwwroot/css/Registration.css
@@ -23,7 +23,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="text"], input[type="password"], input[type="submit"] {
+input[type="text"], input[type="password"], input[type="submit"], input[type="email"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
